Fix login page text box width
-Login page text box was too wide on PC monitor.
-Add max width constraint.

--- a/src/components/login_page.css
+++ b/src/components/login_page.css
@@ -1,4 +1,5 @@
 .user-text-box{
-    max-width: 60%;
+    min-width: 200px;
+    max-width: 500px;
     margin: 10px;
 }
